force-app/main/default/objects/AccountCountryRelatedSetting__mdt/AccountCountryRelatedSetting__mdt.object-meta.xml
<CustomObject>
    <description>this metadata shows what are the objects with dependency with the account country sharing model</description>
    <label>Account Country Related Setting</label>
    <pluralLabel>Account Country Related Settings</pluralLabel>
</CustomObject>