force-app/main/default/objects/AccountCountryRelatedSetting__mdt/fields/AccountLookupAPIName__c.field-meta.xml
<CustomField>
    <fullName>AccountLookupAPIName__c</fullName>
    <description>used to identify the name of the field used as account lookup</description>
    <label>Account Lookup API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>