force-app/main/default/objects/AccountCountryRelatedSetting__mdt/fields/AccountRelationshipName__c.field-meta.xml
<CustomField>
    <fullName>AccountRelationshipName__c</fullName>
    <description>field to store the Account relationship  name</description>
    <label>Account Relationship Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>