force-app/main/default/objects/AccountCountryRelatedSetting__mdt/fields/CountryAPIName__c.field-meta.xml
<CustomField>
    <fullName>CountryAPIName__c</fullName>
    <description>field to identify the field which is gonna be populated</description>
    <label>Country API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>