force-app/main/default/objects/AccountCountryRelatedSetting__mdt/fields/ObjectFilter__c.field-meta.xml
<CustomField>
    <fullName>ObjectFilter__c</fullName>
    <description>field to store a condition in which this object will be queried</description>
    <label>Object Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>